fix: cleanup sharing api and move to registration handler
