# api/v1/REST/openapi.yaml
@@ -70,13 +70,14 @@ paths:
       operationId: register
       parameters:
         - $ref: '#/components/parameters/XDeviceID'
+        - $ref: '#/components/parameters/ShareCode'
       responses:
         '200':
           description: Successful Registration
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RegistrationResponse'
+                $ref: '#/components/schemas/RegistrationResult'
   /auth/share:
     post:
       tags:
@@ -104,7 +105,6 @@ paths:
       operationId: getDevices
       parameters:
         - $ref: '#/components/parameters/XDeviceID'
-        - $ref: '#/components/parameters/ShareCode'
       responses:
         '200':
           $ref: '#/components/responses/DeviceListResponse'
@@ -120,7 +120,6 @@ paths:
       parameters:
         - $ref: '#/components/parameters/XDeviceID'
         - $ref: '#/components/parameters/ModuleName'
-        - $ref: '#/components/parameters/ShareCode'
       responses:
         '200':
           $ref: '#/components/responses/ModuleDataResponse'
@@ -135,7 +134,6 @@ paths:
       parameters:
         - $ref: '#/components/parameters/XDeviceID'
         - $ref: '#/components/parameters/ModuleName'
-        - $ref: '#/components/parameters/ShareCode'
       requestBody:
         $ref: '#/components/requestBodies/ModuleDataRequest'
       responses:
@@ -270,17 +268,14 @@ components:
       properties:
         shareCode:
           type: string
-    RegistrationResponse:
+    RegistrationResult:
       type: object
       properties:
-        deviceID:
-          $ref: '#/components/schemas/DeviceID'
         username:
           type: string
         password:
           type: string
       required:
-        - deviceID
         - username
         - password
   securitySchemes:
